--- a/index.html
+++ b/index.html
@@ -2,12 +2,44 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&display=swap" rel="stylesheet">
     <title>CC Tech</title>
+    <meta name="description" content="A CCTech oferece soluções inovadoras em desenvolvimento de software impulsionado por inteligência artificial. Transforme sua empresa com tecnologia de ponta.">
+    <meta name="keywords" content="CCTech, desenvolvimento de software, inteligência artificial, soluções em IA, automação, tecnologia, machine learning, software personalizado">
+    <meta name="author" content="CCTech">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <!-- SEO avançado -->
+    <link rel="canonical" href="https://www.cctech.com.br/" />
+
+    <!-- Open Graph (Facebook, LinkedIn, etc) -->
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="CCTech | Soluções em Software com IA">
+    <meta property="og:description" content="Impulsione sua empresa com tecnologia de ponta. A CCTech desenvolve software personalizado com inteligência artificial.">
+    <meta property="og:image" content="https://www.cctech.com.br/imagem-compartilhamento.jpg">
+    <meta property="og:url" content="https://www.cctech.com.br/">
+    <meta property="og:site_name" content="CCTech">
+
+    <!-- Twitter Cards -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="CCTech | Soluções em Software com IA">
+    <meta name="twitter:description" content="A CCTech desenvolve soluções inteligentes de software com IA para transformar o seu negócio.">
+    <meta name="twitter:image" content="https://www.cctech.com.br/imagem-compartilhamento.jpg">
+    <meta name="twitter:site" content="@CCTechOficial"> <!-- opcional, se tiver Twitter -->
+
+    <!-- Favicon e tema -->
+    <link rel="icon" href="/favicon.ico" type="image/x-icon">
+    <meta name="theme-color" content="#0a0a0a"> <!-- cor da aba no mobile -->
+
+    <!-- Segurança básica (recomendado) -->
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' https://www.google-analytics.com; style-src 'self' 'unsafe-inline';">
+
+    <!-- Robots (controle para indexação) -->
+    <meta name="robots" content="index, follow">
   </head>
   <body>
     <div id="root"></div>
