feat: changes for legal offices

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&display=swap" rel="stylesheet">
-    <title>CC Tech</title>
+    <title>C2 AI Studio</title>
     <meta name="description" content="A CCTech oferece soluções inovadoras em desenvolvimento de software impulsionado por inteligência artificial. Transforme sua empresa com tecnologia de ponta.">
     <meta name="keywords" content="CCTech, desenvolvimento de software, inteligência artificial, soluções em IA, automação, tecnologia, machine learning, software personalizado">
     <meta name="author" content="CCTech">
